Mark the WindowDimmer window as transparent.

Any window which isn't fully opaque must be marked as transparent.
Otherwise, aura::WindowOcclusionTracker will consider it fully opaque
in occlusion computations.

Bug: 833814
Change-Id: Ie2cc66319efc3c4c0f3f014a685aa7ca2fff2ef8
Reviewed-on: https://chromium-review.googlesource.com/1076349
Reviewed-by: Robert Flack <flackr@chromium.org>
Commit-Queue: François Doray <fdoray@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562948}
Former-commit-id: cb90179064ccb9b3586ea2de8f449b1f7c43f006